Updates Apache Derby to version 10.17.1.0 (#114)
- Release Notes see: https://svn.apache.org/repos/asf/db/derby/code/branches/10.17/RELEASE-NOTES.html
- adjusts required Java version to 21, as Derby "10.17 does NOT support Java releases prior to Java SE 21"
- updates forbiddenapis plugin version to 3.6 to handle jdk-21 compiled classes correctly
- updates jersey to version 2.41 (see: https://github.com/eclipse-ee4j/jersey/wiki/Road-Map)
- switches use of the deprecated URL constructor as advised by JDK javadoc towards URI(..).toURL()